# currency-pipeline

./: .env-dummy  .gitignore  Dockerfile  Dockerfile.airflow  ReadMe.md  config.py  db.py  docker-compose.airflow.yaml  docker-compose.airflow.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: currency_pipeline.py  readme.txt
conf/base/: parameters.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/gold/: dim_currencies.sql  dim_date.sql  fact_rates.sql  schema.yml
dbt/snapshots/: currencies_snapshot.sql
diagrams/: data_model.md  etl-sequence.md  pipeline.md  system-architecture.md  validation.md
ingestion/: ingest_bronze.py
ingestion/io/: __init__.py  api_reader.py
ingestion/jobs/: __init__.py  fetch_currencies_job.py  fetch_rates_job.py
lambda/: pipeline_health_check.py
notebooks/: currencies.ipynb  currencies_aws.ipynb  currencies_gold.ipynb  currencies_local.ipynb
scripts/: load_silver_to_postgres.py  run_dbt.sh  run_pipeline.sh
spark/config/: spark_config.py
spark/schemas/: currency_schema.py  rate_schema.py
spark/session/: __init__.py  builder.py
spark/utils/: cleaner.py  validation.py
terraform/: main.tf  terraform.tfvars.example  variables.tf
tests/: test_validation.py
transformation/: transform_silver.py
utils/: __init__.py  api_reader.py
