[project]
name = "pipedrive-test-task-2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dbt-core>=1.11.7",
    "dbt-postgres>=1.10.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "psycopg[binary]>=3.3.3",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.15.7",
]
