[project]
name = "pipedrive-test-task-aws"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "apache-airflow>=3.2.1",
    "apache-airflow-providers-apache-spark>=5.6.0",
    "apache-airflow-providers-docker>=4.5.5",
    "apache-airflow-providers-standard>=1.13.0",
    "apache-airflow-providers-http>=4.0.0",
    "boto3>=1.43.6",
    "cryptography>=48.0.0",
    "dbt-core==1.8.7",
    "dbt-postgres==1.8.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "psycopg[binary]>=3.3.3",
    "pyarrow>=23.0.1",
    "pyspark==3.5.5",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
